reanimated WFS-service-list, change: SLD loads icons on demand, not ahead added base catalog support (still in progress), minor bugfixes